finished list users as client, testing and documentation included
